--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_script:
   - python -V
 
 script:
-  - travis_wait python -m pytest
+  - travis_wait 30 python -m pytest
 
 notifications:
   email:
